[tool.poetry]
name = "pizza-app"
version = "0.1.0"
description = ""
authors = ["Himanshu <himanshchauhan6@gmail.com>"]
readme = "README.md"
packages = [{include = "pizza_app"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
